# sports-modeling

./: README.md  hello.py  pyproject.toml  test  test.qmd  test.stan
projects/nfl/plays/: pass_rate_model.qmd  plays_model.qmd  plays_model2.qmd
projects/qb_epa/: qb_epa  qb_epa_basic.md  qb_epa_basic.qmd
projects/qbs/qb_epa/: qb_epa.stan  qb_epa_w_stan.qmd
projects/qbs/qb_epa/qb_epa_basic_files/: qb_epa.stan  qb_epa_basic.md  qb_epa_basic.qmd
projects/wnba_team_2025/: wnba_elo.qmd  wnba_player.qmd  wnba_team_2025.qmd
