[project]
name = "sports-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "graphviz>=0.20.3",
    "jupyter>=1.1.1",
    "networkx>=3.4.2",
    "plotnine>=0.14.5",
    "pymc>=5.22.0",
    "statsmodels>=0.14.4",
]
